re PR c++/26988 (template constructor in template class derived from virtual base can not be specialized)

PR c++/26988
	* pt.c (determine_specialization): Use skip_artificial_parms_for.
	(fn_type_unificiation): Likewise.
	(get_bindings): Likewise.
	PR c++/26988
	* g++.dg/template/spec34.C: New test

From-SVN: r121822